--- a/style.css
+++ b/style.css
@@ -185,7 +185,10 @@ article#devin {
   background-color: #E8E8E8;
 }
 
-article#devin div.title, article#devin content p, article#devin div.content p.minimize.button a {
+article#devin div.title,
+article#devin div.content p,
+article#devin div.content p.minimize.button a,
+article#devin p.button a {
   color: #111;
   border-color: #111;
 }
