Deloss init styles

--- a/style.css
+++ b/style.css
@@ -200,3 +200,9 @@ article#devin p.button a {
 article#devin img {
   width: 63%;
 }
+
+/* Deloss */
+
+article#deloss {
+  background-color: #493C8E;
+}
