--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,12 @@
   font-size: 18px;
   line-height: 1.6; }
 
-body {
-  background-color: rgba(55, 142, 168, 0.25);
-  text-align: center; }
-
-.content {
-  box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.25);
-  display: inline-block;
-  margin-bottom: 50px; }
-
 .cardinal {
   color: #990000; }
 
 hr {
+  border-top-color: #c2c2c2;
+  border-top-color: rgba(55, 142, 168, 0.5);
   margin-top: 0;
   margin-bottom: 18px; }
 
@@ -40,6 +33,32 @@ hr {
     margin-top: 45px; }
 .body p {
   margin-bottom: 25px; }
+  .body p span[class*="text"] {
+    font-size: 20px; }
+  .body p .html-text {
+    color: #E44D26; }
+  .body p .css-text {
+    color: #1B73BA; }
+  .body p .sass-text {
+    color: #b37399; }
+  .body p .boot-text {
+    color: #5C4383; }
+  .body p .js-text {
+    color: #E5BB31; }
+  .body p .jq-text {
+    color: #0769AD; }
+  .body p .ruby-text {
+    color: #CC0000; }
+  .body p .rails-text {
+    color: #CC0000; }
+  .body p .wp-text {
+    color: #0073AA; }
+  .body p .monkey-text {
+    color: #A9BD38; }
+.body .row {
+  margin-bottom: 25px; }
+.body .projects hr {
+  margin-bottom: 35px; }
 .body .projects h3 {
   text-align: center;
   margin-top: 0px;
@@ -51,14 +70,44 @@ hr {
 .body .projects .project-image {
   padding: 0;
   margin-bottom: 15px; }
+  .body .projects .project-image .preview-top {
+    width: 100%;
+    height: 40px;
+    background: #e8e8e8;
+    padding: 7px; }
+    .body .projects .project-image .preview-top [class^=circle-] {
+      width: 14px;
+      height: 14px;
+      display: inline-block;
+      float: left;
+      border-radius: 1000px;
+      margin: 6px 0 0 8px; }
+      .body .projects .project-image .preview-top [class^=circle-].circle-red {
+        background: #d95b6a; }
+      .body .projects .project-image .preview-top [class^=circle-].circle-yellow {
+        background: #e0d85e; }
+      .body .projects .project-image .preview-top [class^=circle-].circle-green {
+        background: #5bd98a; }
+    .body .projects .project-image .preview-top .preview-url {
+      width: 90%;
+      height: 26px;
+      float: right;
+      border-radius: 3px;
+      background: #fff;
+      font-size: 14px;
+      color: #919191;
+      padding: 2px 8px 0;
+      margin-bottom: 0; }
   .body .projects .project-image img {
-    width: 100%; }
+    width: 100%;
+    border: 7px solid #e8e8e8;
+    border-top: none; }
   .body .projects .project-image .overlay {
     position: absolute;
     width: 100%;
     height: 100%;
     opacity: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.75);
     transition: opacity 750ms; }
     .body .projects .project-image .overlay .btn {
       font-size: 22px;
@@ -67,9 +116,25 @@ hr {
       left: 50%;
       transform: translate3d(-50%, -50%, 0);
       border: 0;
+      border-radius: 0px;
       box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.25);
       padding: 10px 20px; }
   .body .projects .project-image:hover .overlay {
     opacity: 1; }
+.body .projects .blurb {
+  text-align: center; }
+  .body .projects .blurb p {
+    margin-bottom: 15px; }
+  .body .projects .blurb .btn {
+    font-size: 22px;
+    color: #378ea8;
+    border-radius: 0px;
+    border: 2px solid rgba(55, 142, 168, 0.5);
+    margin-bottom: 25px;
+    transition: all 500ms; }
+    .body .projects .blurb .btn:hover, .body .projects .blurb .btn:focus, .body .projects .blurb .btn:active {
+      background-color: #378ea8;
+      color: #fff;
+      box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.25); }
 
 /*# sourceMappingURL=style.css.map */
